# linexin-installer

./: PKGBUILD  README.md  pyproject.toml
src/usr/share/linexin-installer/: LEGACY_installation_template_widget.py  Linexin-Installer-Documentation.md  bootloader.sh  de_picker_widget.py  disk_utility_widget.py  finish_widget.py  installation_template_widget.py  installation_widget.py  installer  keyboard_layout_widget.py  language_widget.py  post-install.sh  remove_gpu.sh  simple_localization_manager.py  timezone_widget.py  user_creation_widget.py  welcome_widget.py  world_land.json
src/usr/share/linexin-installer/gtk-4.0-no-glass/: colors.css  gtk.css
src/usr/share/linexin-installer/snapshots/: 00-linexin-snapshot.hook  linexin-snapshot
src/usr/share/linexin-installer/translations/: de_DE.py  en_AU.py  en_CA.py  en_GB.py  en_US.py  es_ES.py  fi_FI.py  fr_FR.py  hi_IN.py  pl_PL.py  pt_BR.py  pt_PT.py  ru_RU.py  zh_CN.py
